# refactoring_challenge

./: .gitignore  AI_USAGE.md  DOCS.md  NEXT_STEPS.md  README.md  TASKS.md  pyproject.toml
.github/workflows/: ci.yml
data/: forcing.csv
legacy_code/: config.py  forcing.py  reach.py  reaches.py  run_legacy.py  utils.py  water_model.py
src/deltares_model/: cli.py  forcing.py  reach.py  water_model.py
src/legacy_code/: __init__.py  config.py  forcing.py  run_legacy.py  utils.py  water_model.py
tests/: test_forcing.py  test_legacy_bug.py  test_reach.py  test_run_all.py  test_utils.py
