[tool.poetry]
name = "refactor-challenge"
version = "0.0.1"
description = "Legacy code refactoring challenge"
authors = ["Bart van Es"]
readme = "README.md"
repository = "https://github.com/TABVE/refactoring_challenge"
packages = [{ include = "src/deltares-model" }]

[tool.poetry.dependencies]
python = "3.12.12"

[tool.ruff]
line-length = 88
target-version = ['py312']

[tool.black]
line-length = 88
target-version = ['py312']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.mypy]
strict = true
[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
